--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
 <body>
     <div id="app">
-
         <div class="container">
             <div class="row">
                 <div class="col-11 col-lg-6 my-3">
@@ -59,22 +58,20 @@
             <div class="row px-2" id="questions-list">
                 <!-- <div class="col-md-4"> -->
                 <!--Template for card data-->
-                <!-- <div class="card card-body flashcard my-3">
-     <h4 class="text-capitalize">question title?</h4>
-     <a href="#" class="text-capitalize my-3 show-answer">show/hide answer</a>
-     <h5 class="answer mb-3">question answer</h5>
-     <div class="flashcard-btn d-flex justify-content-between">
-      <a href="#" id="edit-flashcard" class=" btn my-1 edit-flashcard text-uppercase" data-id="">edit</a>
-      <a href="#" id="delete-flashcard" class=" btn my-1 delete-flashcard text-uppercase">delete</a>
-     </div> -->
+                <div class="card card-body flashcard my-3">
+                    <h4 class="text-capitalize">question title?</h4>
+                    <a href="#" class="text-capitalize my-3 show-answer">show/hide answer</a>
+                    <h5 class="answer mb-3">question answer</h5>
+                    <div class="flashcard-btn d-flex justify-content-between">
+                        <a href="#" id="edit-flashcard" class=" btn my-1 edit-flashcard text-uppercase"
+                            data-id="">edit</a>
+                        <a href="#" id="delete-flashcard" class=" btn my-1 delete-flashcard text-uppercase">delete</a>
+                    </div>
+                </div>
             </div>
+
         </div>
-
     </div>
-    </div>
-
-    </div>
-
 
     <!-- VueJS-->
     <script src="https://unpkg.com/vue@3"></script>
