--- a/index.html
+++ b/index.html
@@ -26,27 +26,31 @@
             <div class="row">
                 <div class="col-11 col-lg-6 my-3">
                     <h3 class="text-capitalize">flashcards</h3>
-                    <button class="btn text-capitalize my-2 show-btn" id="show-btn">add question</button>
-                    <div class="card card-body my-3 question-card">
+                    <button @click="onAddQuestion" class="btn text-capitalize my-2 show-btn" id="show-btn">add
+                        question</button>
+                    <div v-show="mustShowForm" class="card card-body my-3 question-card">
                         <!-- close btn -->
-                        <a href="#" class="close-btn mt-0">
+                        <a href="#" @click="onCloseForm()" class="close-btn mt-0">
                             <i class="fas fa-window-close"></i>
                         </a>
                         <!-- end of close btn -->
                         <div class="feedback alert w-75 text-capitalize">
                             customer feedback
                         </div>
-                        <form id="question-form">
+                        <!-- v-show: tarde o temprano este formulario se va a mostrar, mejor tenerlo renderizado en el DOM -->
+                        <form @submit.prevent="onAddNote" id="question-form">
                             <!-- single input -->
                             <h5 class="text-capitalize">question</h5>
                             <div class="form-group">
-                                <textarea class="w-100" id="question-input" rows="3"></textarea>
+                                <textarea v-model="note.question" class="w-100" id="question-input" rows="3"
+                                    required></textarea>
                             </div>
                             <!-- end of single input -->
                             <!-- single input -->
                             <h5 class="text-capitalize">answer</h5>
                             <div class="form-group">
-                                <textarea class="w-100" id="answer-input" rows="3"></textarea>
+                                <textarea v-model="note.answer" class="w-100" id="answer-input" rows="3"
+                                    required></textarea>
                             </div>
                             <!-- end of single input -->
                             <button type="submit" class="btn submitBtn text-capitalize w-50">save</button>
@@ -56,20 +60,21 @@
             </div>
 
             <div class="row px-2" id="questions-list">
-                <!-- <div class="col-md-4"> -->
-                <!--Template for card data-->
-                <div class="card card-body flashcard my-3">
-                    <h4 class="text-capitalize">question title?</h4>
-                    <a href="#" class="text-capitalize my-3 show-answer">show/hide answer</a>
-                    <h5 class="answer mb-3">question answer</h5>
-                    <div class="flashcard-btn d-flex justify-content-between">
-                        <a href="#" id="edit-flashcard" class=" btn my-1 edit-flashcard text-uppercase"
-                            data-id="">edit</a>
-                        <a href="#" id="delete-flashcard" class=" btn my-1 delete-flashcard text-uppercase">delete</a>
+                <div class="col-md-4">
+                    <!--Template for card data-->
+                    <div v-for="note in notes" class="card card-body flashcard my-3">
+                        <h4 class="text-capitalize">{{ note.question }}</h4>
+                        <a href="#" class="text-capitalize my-3 show-answer">show/hide answer</a>
+                        <h5 class="answer mb-3"> {{ note.answer }} </h5>
+                        <div class="flashcard-btn d-flex justify-content-between">
+                            <a href="#" id="edit-flashcard" class=" btn my-1 edit-flashcard text-uppercase"
+                                data-id="">edit</a>
+                            <a @click="onDelete(note)" href="#" id="delete-flashcard"
+                                class=" btn my-1 delete-flashcard text-uppercase">delete</a>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
